--- a/src/views/estaciones.html
+++ b/src/views/estaciones.html
@@ -5,11 +5,10 @@
     <title>Estaciones</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="/src/styles/index.css" />
-    <link rel="stylesheet" href="/src/styles/estaciones.css">
+    <link href="https://fonts.cdnfonts.com/css/lcd" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
 </head>
 
@@ -88,19 +87,19 @@
                 </div>
             </nav>
 
+            <!-- Contenido principal -->
             <main class="col-md-8 col-lg-10 offset-md-4 offset-lg-2 p-0 justify-content-center">
-                <!-- Contenido principal -->
                 <!-- Cards -->
                 <div class="cards mx-3 mb-5">
                     <div class="container-fluid p-3 align-items-center d-flex flex-column gap-3 ">
                         <div class="row justify-content-center gap-3">
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
                                     <h6>Mariano Boedo</h6>
                                     <h6>Formosa</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
@@ -122,16 +121,16 @@
                                 </div>
                             </div>
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
                                     <h6>Werning Combustible</h6>
                                     <h6>RUTA NACIONAL 81</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
-                                            <P class="lcd-font  mx-1 px-2 bg-black border ">871</P>
+                                            <P class=" mx-1 px-2 bg-black border ">871</P>
                                         </li>
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">INFINIA $</p>
@@ -151,12 +150,12 @@
                         </div>
                         <div class="row justify-content-center gap-3">
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
                                     <h6>El Espinillo</h6>
                                     <h6>Formosa</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
@@ -178,12 +177,12 @@
                                 </div>
                             </div>
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/axion2.png" class="img-fluid" alt="">
                                     <h6>AXION energy</h6>
                                     <h6>Carlos Pellegrini 705</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
@@ -207,12 +206,12 @@
                         </div>
                         <div class="row justify-content-center gap-3">
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/axion2.png" class="img-fluid" alt="">
                                     <h6>AXION energy</h6>
-                                    <h6>Lopez y Planes y Saavedra, Ruta 3</h6>
+                                    <h6>Lopez y Planes y Saavedra</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
@@ -234,12 +233,12 @@
                                 </div>
                             </div>
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
                                     <h6>M-M Petrol S.A.S</h6>
                                     <h6>San Martín 2</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
@@ -263,12 +262,12 @@
                         </div>
                         <div class="row justify-content-center gap-3">
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/shell.png" class="img-fluid" alt="">
                                     <h6>Shell Formosa</h6>
                                     <h6>Av. Dr. Nestor Kirchner 4315</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
@@ -290,12 +289,12 @@
                                 </div>
                             </div>
                             <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
-                                <div class="col-4 text-center my-auto">
+                                <div class="col-6 text-center my-auto">
                                     <img src="/src/assets/img/shell.png" class="img-fluid" alt="">
                                     <h6>Shell La Estación S.A.</h6>
                                     <h6>RN11 Km 1164</h6>
                                 </div>
-                                <div class="col-8 my-auto">
+                                <div class="col-6 my-auto">
                                     <ul class="list-unstyled m-0 ">
                                         <li class="d-flex justify-content-center">
                                             <p class=" oswald">SUPER $</p>
