--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/src/styles/index.css" />
     <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
 </head>
 
@@ -18,7 +18,7 @@
         <div class="row vh-100">
             <nav class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <img src="/src/assets/img/logo.png" class="img-fluid w-50 " alt="">
+                    <img src="/src/assets/img/logo.png" class="img-fluid w-50 mx-auto" alt="">
                 </a>
                 <hr class="text-white">
                 <div class="d-md-flex flex-column p-0 overflow-y-auto">
