--- a/src/views/mapa.html
+++ b/src/views/mapa.html
@@ -14,7 +14,7 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="/landing/index.css">
     <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="/src/styles/map.css">
 </head>
 
 <body class="vh-100">
